tests/parsing/smtlib/v2.6/errors/129_constructor_dec_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/129_constructor_dec_bad_name_1.smt2", line 2, character 24-25:
2 | (declare-datatype foo ((_)))
                            ^
Error while parsing a constructor declaration, read the reserved word '_',
      but expected a symbol for the constructor name.
